Group the routes in Swagger UI and added description
